# reader-web.app

./: .editorconfig  .env.local  .env.production.local  .gitignore  .prettierrc.json  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  turbo.json
apps/web/: .gitignore  next.config.mjs  package.json
apps/web/app/: layout.tsx  page.tsx
scripts/: install-rust.sh  source.sh
